--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+server.port = 4041
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bd-mariscal-fast-food?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=tricampeon2015
+
+
+#spring.datasource.password=algen
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+# Configurar Hibernate
+#spring.jpa.hibernate.ddl-auto: update
+#spring.jpa.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.show-sql = true
+
+spring.data.redis.repositories.enabled=false
+#spring.data.elasticsearch.repositories.enabled=false
+#spring.data.jpa.repositories.enabled=false
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
