--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 4041
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bd-mariscal-fast-food?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=tricampeon2015
+spring.datasource.password=admin123
 
 
 #spring.datasource.password=algen
