--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port = 4041
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bd-mariscal-fast-food?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/bd-mariscal-fast-food?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/mariscal?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin123
 
